--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Re:Edu / Homework 18</title>
+    <title>Re:Edu / Mid-Term-3</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reponsive.css">
 </head>
